Website: text/config updates.

--- a/webapp/app/views/pages/about.html.haml
+++ b/webapp/app/views/pages/about.html.haml
@@ -14,6 +14,8 @@
         and 
         =link_to 'PostGIS', 'http://postgis.refractions.net/'
       %li
+        =link_to 'GeoServer', 'http://geoserver.org/'
+      %li
         =link_to 'OpenLayers', 'http://openlayers.org/'
       %li 
         =link_to 'jQuery', 'http://jquery.com/' 
