--- a/webapp/app/views/pages/contact.html.haml
+++ b/webapp/app/views/pages/contact.html.haml
@@ -2,7 +2,7 @@
   %h1#contact_title Contact us 
   %p
     If you're interested in the publication of biodiversity data, contact
-    =link_to 'Dimitri Brosens', 'mailto:Dimitri.BROSENS@INBO.BE' 
+    =link_to 'Dimitri Brosens', 'mailto:d.brosens@biodiversity.be' 
     (Belgian Biodiversity Platform).
   
   .grid_5.alpha.prefix_1.contact_block  
@@ -40,13 +40,11 @@
       -#       n.noe@biodiversity.be
       %br
       =link_to 'Belgian Biodiversity Platform', 'http://www.biodiversity.be'
-      \/ ULB
+      \/ BELSPO
+      %br 
+      231, Avenue Louise
       %br
-      ULB - Campus de la Plaine CP 257
-      %br
-      1050 Brussels - Belgium
-      %br
-      +32 (0)2 650.57.52
+      B1000 Brussels - Belgium
    
 .clear
 
