--- a/webapp/app/views/pages/search.html.haml
+++ b/webapp/app/views/pages/search.html.haml
@@ -10,7 +10,10 @@
    
 .grid_9.equal_height_columns
   %h1#intro_title Introduction
-  .blabla Ever since the year 1939 occurrences of vascular plants in Belgium and Luxemburg were registered in IFBL survey lists. The goal of this website is to compile and visualize Belgian this IFBL Flora checklists data in one portal. At this time, the IFBL data Portal brings together data from two digitization projects from the Belgian Biodiversity Portal:  IFBL1 and IFBL2 and the Florabank,  the database that deals with the distribution data of the wild flora (indigenous species, archeophytes and naturalised aliens) of Flanders and the Brussels Capital Region. 
+  .blabla 
+    Ever since the year 1939 occurrences of vascular plants in Belgium and Luxemburg were registered in IFBL survey lists. The goal of this website is to compile and visualize this IFBL Flora checklists data in one portal. At this time, the IFBL data Portal brings together data from three digitization projects from the 
+    =link_to 'Belgian Biodiversity Platform', 'http://www.biodiversity.be/' 
+    \: IFBL1/IFBL2/IFBL3, and the Florabank, the database that deals with the distribution data of the wild flora (indigenous species, archeophytes and naturalised aliens) of Flanders and the Brussels Capital Region. 
 
 .clear
 
