--- a/webapp/app/views/pages/metadata.html.haml
+++ b/webapp/app/views/pages/metadata.html.haml
@@ -1,11 +1,11 @@
 #metadata_content.grid_7.suffix_1.equal_height_columns
   %h1#metadata Metadata
   
-  %h2#metadata_ifbl Metadata IFBL1 & 2: Actions for Belgian IFBL Flora Checklists (1939-1971)
+  %h2#metadata_ifbl Metadata IFBL1, 2 & 3: Actions for Belgian IFBL Flora Checklists (1939-1971)
   
   %h3#m_i_abstract Abstract
   .blabla
-    The data in IFBL 1 & 2 covers a substantial part of the IFBL 1 km² flora checklists sampled between 1939 and 1971. About 4000 original lists (2/5 of the approx. 10 000 available lists) corresponding with some 400 000 data representative of the former distribution of vascular plant species in Belgium, were digitised after a selection procedure based on the quality of the individual lists and on maximising the spatial dispersion of the data throughout Belgium. The IFBL1 data is integrated in existing national and regional flora databases and will contribute to the realisation of regional Flora Atlases. The analysis of the digitised data will improve the possibilities to compare floral data over successive periods and will be of help in developing a strategy for reducing the costs and the length of new flora monitoring and mapping projects in the future.
+    The data in IFBL 1, 2 & 3 covers a substantial part of the IFBL 1 km² flora checklists sampled between 1939 and 1971. About 4000 original lists (2/5 of the approx. 10 000 available lists) corresponding with some 1 200 000 data representative of the former distribution of vascular plant species in Belgium, were digitised after a selection procedure based on the quality of the individual lists and on maximising the spatial dispersion of the data throughout Belgium. The IFBL1 data is integrated in existing national and regional flora databases and will contribute to the realisation of regional Flora Atlases. The analysis of the digitised data will improve the possibilities to compare floral data over successive periods and will be of help in developing a strategy for reducing the costs and the length of new flora monitoring and mapping projects in the future.
   
   .blabla
     The Atlas of the Flora (Pteridophytes – Spermatophytes) of Belgium and Luxemburg (Van Rompaey & Delvosalle 1972) was the result of the first national flora mapping project (1939- 1971). Unfortunately, the data used to build it were only digitised at a synthetic level (units of 16 km²). To be able to investigate the changes in the flora between the first mapping period and the second (1972 up to now) in all its aspects, especially in relation to environmental factors (climatic, pollution, land use…), the original data was digitized, i.e. the field records on the flora (flora checklists) made within 1km² IFBL squares.
@@ -30,7 +30,7 @@
   =btt  
   %h3#m_i_coverage General spatial coverage
   .blabla
-    IFBL1 & 2: Actions for Belgian IFBL Flora Checklists deals with the distribution data on the wild flora of Belgium in the time period 1939-1971. Florabank covers an area of 13.682,38 km². Belgium has a temperate maritime climate influenced by the North Sea and the Atlantic Ocean, with relatively moderate summers and mild winters.
+    IFBL1, 2 & 3: Actions for Belgian IFBL Flora Checklists deals with the distribution data on the wild flora of Belgium in the time period 1939-1971. Florabank covers an area of 13.682,38 km². Belgium has a temperate maritime climate influenced by the North Sea and the Atlantic Ocean, with relatively moderate summers and mild winters.
   
   =btt
   %h3#m_i_coordinates Coordinates
@@ -45,12 +45,12 @@
   =btt
   %h3#m_i_published Data published through GBIF
   .blabla
-    =link_to 'http://data.gbif.org/datasets/resource/10969/', 'http://data.gbif.org/datasets/resource/10969/'
+    =link_to 'http://www.gbif.org/dataset/940821c0-3269-11df-855a-b8a03c50a862', 'http://www.gbif.org/dataset/940821c0-3269-11df-855a-b8a03c50a862'
   
   =btt  
   %h2#metadata_florabank Florabank1 checklists Metadata
   
-  %p.tip Last data update: April 5th, 2012.
+  %p.tip Last data update: October 14th, 2014.
   
   %h3#m_f_abstract Abstract
   .blabla
@@ -110,7 +110,7 @@
       =link_to 'Metadata', '#metadata'
       %ul
         %li 
-          =link_to 'Metadata IFBL1 & 2: Actions for Belgian IFBL Flora Checklists (1939-1971)', '#metadata_ifbl'
+          =link_to 'Metadata IFBL1, 2 & 3: Actions for Belgian IFBL Flora Checklists (1939-1971)', '#metadata_ifbl'
           %ul
             %li= link_to 'Abstract', '#m_i_abstract'
             %li= link_to 'Methods of digitizing', '#m_i_methods'
