Website text updates.

--- a/webapp/app/views/pages/about.html.haml
+++ b/webapp/app/views/pages/about.html.haml
@@ -12,7 +12,7 @@
       %li
         =link_to 'PostgreSQL', 'http://www.postgresql.org/' 
         and 
-        =link_to 'PostGIS', 'http://postgis.refractions.net/'
+        =link_to 'PostGIS', 'http://postgis.net/'
       %li
         =link_to 'GeoServer', 'http://geoserver.org/'
       %li
