--- a/webapp/app/views/pages/metadata.html.haml
+++ b/webapp/app/views/pages/metadata.html.haml
@@ -5,7 +5,7 @@
   
   %h3#m_i_abstract Abstract
   .blabla
-    The data in IFBL 1, 2 & 3 covers a substantial part of the IFBL 1 km² flora checklists sampled between 1939 and 1971. About 4000 original lists (2/5 of the approx. 10 000 available lists) corresponding with some 1 200 000 data representative of the former distribution of vascular plant species in Belgium, were digitised after a selection procedure based on the quality of the individual lists and on maximising the spatial dispersion of the data throughout Belgium. The IFBL1 data is integrated in existing national and regional flora databases and will contribute to the realisation of regional Flora Atlases. The analysis of the digitised data will improve the possibilities to compare floral data over successive periods and will be of help in developing a strategy for reducing the costs and the length of new flora monitoring and mapping projects in the future.
+    The data in IFBL 1, 2 & 3 covers all of the IFBL 1 km² flora checklists sampled between 1939 and 1971. About 10000 original lists corresponding with some 1 200 000 data representative of the former distribution of vascular plant species in Belgium, were digitised. The IFBL data is integrated in existing national and regional flora databases and will contribute to the realisation of regional Flora Atlases. The analysis of the digitised data will improve the possibilities to compare floral data over successive periods and will be of help in developing a strategy for reducing the costs and the length of new flora monitoring and mapping projects in the future.
   
   .blabla
     The Atlas of the Flora (Pteridophytes – Spermatophytes) of Belgium and Luxemburg (Van Rompaey & Delvosalle 1972) was the result of the first national flora mapping project (1939- 1971). Unfortunately, the data used to build it were only digitised at a synthetic level (units of 16 km²). To be able to investigate the changes in the flora between the first mapping period and the second (1972 up to now) in all its aspects, especially in relation to environmental factors (climatic, pollution, land use…), the original data was digitized, i.e. the field records on the flora (flora checklists) made within 1km² IFBL squares.
@@ -50,7 +50,7 @@
   =btt  
   %h2#metadata_florabank Florabank1 checklists Metadata
   
-  %p.tip Last data update: October 14th, 2014.
+  %p.tip Last data update: October 16th, 2014.
   
   %h3#m_f_abstract Abstract
   .blabla
@@ -73,7 +73,7 @@
   =btt  
   %h1#coverage Taxonomic coverage of the Datasets
   .blabla
-    The coverage of the databases spans the Phylum Tracheophyta; vascular plants. The highest number of records are from the Magnoliopsida followed by Monocotyledones, Filicopsida, Coniferopsida, Sphenopsida and Coniferopsida.
+    The coverage of this database spans the Phylum Tracheophyta or vascular plants. The highest number of records are from the Magnoliopsida (76.48%) followed by Monocotyledones (20.92%), Filicopsida (1.44%), Sphenopsida (0.97%) Coniferopsida (0.13%) and Lycopsida (0.03%). Ginkgopsids are within the scope of Florabank, but do not occur within the geographical scope of the database.
     
   .blabla
     As a taxonomic reference this publication was used: Lambinon (1998).
